--- a/MCCHD_covid_primary_figures.Rmd
+++ b/MCCHD_covid_primary_figures.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Missoula County COVID-19 Cases"
 author: "Ethan Walker, University of Montana"
-date: "Data as of September 10, 2020"
+date: "Data as of September 17, 2020"
 output: pdf_document
 header-includes:
     - \usepackage[labelformat=empty, font={Large, bf}]{caption}
@@ -227,6 +227,70 @@ covid_incidence <- county_incidence %>%
 covid_incidence
 
 #ggsave("incidence_plot.jpg", width = 10, height = 5)
+```
+
+\pagebreak  
+
+```{r}
+#Symptoms and gender
+covid_plot <- covid_data %>% 
+   filter(!is.na(race)) %>% 
+   ggplot() +   
+     geom_bar(aes(x = fct_rev(race)), fill = "steelblue", width = .6) +   
+     labs(title = "Confirmed cases by self-reported race",
+          y = "Count", x = "", fill = "") +
+     scale_y_continuous(breaks = c(seq(0, 500, 20)), labels = c(seq(0, 500, 20))) +
+     coord_flip() +
+     theme_minimal() +
+     theme(strip.text = element_text(size = 16, colour = "black"),
+           title = element_text(size = 18, colour = "black"),
+           panel.grid = element_blank(),
+           axis.text.x = element_text(size = 14, colour = "black", 
+                                     angle = 45, vjust = 0.75, hjust = 0.9),
+           legend.text = element_text(size = 16, colour = "black"),
+           legend.title = element_text(size = 16, colour = "black"),
+           axis.text.y = element_text(size = 16, colour = "black"),
+           axis.title.y = element_text(size = 16, colour = "white"),
+           axis.title.x = element_blank(),
+           axis.line.x = element_line(colour = "black", size = 1.2), 
+           axis.line.y = element_line(colour = "black", size = 1.2), 
+           axis.ticks = element_line(colour = "black")) + 
+     scale_fill_manual(values = cbPalette)
+covid_plot
+
+#ggsave("race_plot.jpg", width = 10, height = 5)
+```
+
+\pagebreak  
+
+```{r}
+#Symptoms and gender
+covid_plot <- covid_data %>% 
+   filter(!is.na(ethnicity)) %>% 
+   ggplot() +   
+     geom_bar(aes(x = fct_rev(ethnicity)), fill = "steelblue", width = .6) +   
+     labs(title = "Confirmed cases by self-reported ethnicity",
+          y = "Count", x = "", fill = "") +
+     scale_y_continuous(breaks = c(seq(0, 500, 20)), labels = c(seq(0, 500, 20))) +
+     coord_flip() +
+     theme_minimal() +
+     theme(strip.text = element_text(size = 16, colour = "black"),
+           title = element_text(size = 18, colour = "black"),
+           panel.grid = element_blank(),
+           axis.text.x = element_text(size = 14, colour = "black", 
+                                     angle = 45, vjust = 0.75, hjust = 0.9),
+           legend.text = element_text(size = 16, colour = "black"),
+           legend.title = element_text(size = 16, colour = "black"),
+           axis.text.y = element_text(size = 16, colour = "black"),
+           axis.title.y = element_text(size = 16, colour = "white"),
+           axis.title.x = element_blank(),
+           axis.line.x = element_line(colour = "black", size = 1.2), 
+           axis.line.y = element_line(colour = "black", size = 1.2), 
+           axis.ticks = element_line(colour = "black")) + 
+     scale_fill_manual(values = cbPalette)
+covid_plot
+
+#ggsave("ethnicity_plot.jpg", width = 10, height = 5)
 ```
 
 \pagebreak  
@@ -660,7 +724,7 @@ covid_plot_onset
 ## Using State data to be able to incorporate local vs imported cases
 ## Only updates once per week
 
-case_data <- read_xlsx(paste0(file_path, "Input/SI_Local_v_Import Data_09.10.2020.xlsx"),
+case_data <- read_xlsx(paste0(file_path, "Input/SI_Local_v_Import Data_09.17.2020.xlsx"),
                                  sheet = 2) %>% 
    rename_all(tolower) %>% 
    select(-case_no) %>% 
