--- a/initial_cleaning.Rmd
+++ b/initial_cleaning.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "MCCHD Covid-19 initial data cleaning"
 author: "Ethan Walker"
-date: "Started 2 April 2020, Updated 10 Sept 2020"
+date: "Started 2 April 2020, Updated 17 Sept 2020"
 output:
   pdf_document: default
   html_document:
@@ -31,8 +31,8 @@ input_path <- c("C:/Users/ethan.walker/Box/Missoula_COVID19EpiProfile_Working/")
 
 
 covid_data_initial <- 
-   read_xlsx(paste0(input_path, "COVID data 9.10.20.xlsx"), 
-             range = "A2:Y500", 
+   read_xlsx(paste0(input_path, "COVID data 9.17.20.xlsx"), 
+             range = "A2:Y600", 
                         col_names = c("case_id", "age", "gender", "race", 
                                       "ethnicity", "zipcode", "healthcare_worker",
                                       "symptoms", "symptom_type", "symptom_onset_date",
@@ -177,7 +177,10 @@ covid_clean <- covid_data_initial %>%
           age_group = as.factor(age_group),
           age_group2 = as.factor(age_group2),
           race = as.factor(race),
-          ethnicity = as.factor(ethnicity))
+          ethnicity = fct_collapse(ethnicity,
+                                   "hispanic/latino" = c("hispanic/latino"),
+                                   "not hispanic or latino" = 
+                                    c("not hispanic or latino", "non hispanic")))
 
 summary(covid_clean)
 ```
