--- a/initial_cleaning.Rmd
+++ b/initial_cleaning.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "MCCHD Covid-19 initial data cleaning"
 author: "Ethan Walker"
-date: "Started 2 April 2020, Updated 17 Sept 2020"
+date: "Started 2 April 2020, Updated 21 Sept 2020"
 output:
   pdf_document: default
   html_document:
@@ -31,8 +31,8 @@ input_path <- c("C:/Users/ethan.walker/Box/Missoula_COVID19EpiProfile_Working/")
 
 
 covid_data_initial <- 
-   read_xlsx(paste0(input_path, "COVID data 9.17.20.xlsx"), 
-             range = "A2:Y600", 
+   read_xlsx(paste0(input_path, "COVID data 9.21.20.xlsx"), 
+             range = "A2:Y900", 
                         col_names = c("case_id", "age", "gender", "race", 
                                       "ethnicity", "zipcode", "healthcare_worker",
                                       "symptoms", "symptom_type", "symptom_onset_date",
@@ -187,8 +187,9 @@ summary(covid_clean)
 
 ```{r}
 # Save data
-output_path <- c("C:/Users/ethan.walker/Box/Ethan Walker UM/R/covid19/")
+file_path <- c("C:/R/covid19/")
 
-write_rds(covid_clean, paste0(output_path, "Output/covid_data_clean.rds"))
+
+write_rds(covid_clean, paste0(file_path, "covid_data_clean.rds"))
 ```
 
