--- a/montana_covid_data.Rmd
+++ b/montana_covid_data.Rmd
@@ -218,6 +218,7 @@ powell_county <- county_function("Powell")
 phillips_county <- county_function("Phillips")
 prairie_county <- county_function("Prairie")
 mineral_county <- county_function("Mineral")
+carter_county <- county_function("Carter")
 
 
 
@@ -247,7 +248,8 @@ county_data_combined <- plyr::rbind.fill(missoula_county, gallatin_county,
                                          chouteau_county, jbasin_county,
                                          sweetgrass_county, sanders_county,
                                          powell_county, phillips_county,
-                                         prairie_county, mineral_county) %>% 
+                                         prairie_county, mineral_county,
+                                         carter_county) %>% 
    group_by(county) %>% 
    mutate("Cumulative total cases" = cumsum(`Daily total cases`),
           "Cumulative active cases" = cumsum(Active),
@@ -258,7 +260,7 @@ output_path <- c("C:/Users/ethan.walker/Box/Ethan Walker UM/R/covid19/")
 
 write_csv(county_data_combined, paste0(output_path, "Output/county_data_combined.csv"))
 
-carter_county <- county_function("Carter")
+
 petroleum_county <- county_function("Petroleum")
 ```
 
