--- a/MCCHD_covid_primary_figures.Rmd
+++ b/MCCHD_covid_primary_figures.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Missoula County COVID-19 Cases"
 author: "Ethan Walker, University of Montana"
-date: "Data as of September 24, 2020"
+date: "Data as of September 28, 2020"
 output: pdf_document
 header-includes:
     - \usepackage[labelformat=empty, font={Large, bf}]{caption}
@@ -42,6 +42,14 @@ file_path <- c("C:/Users/ethan.walker/Box/Ethan Walker UM/R/covid19/")
 
 
 covid_data <- read_rds(paste0(input_path, "covid_data_clean.rds"))
+
+summary_data <- covid_data %>% 
+   mutate(month_of_year = month(symptom_onset_date_new, label = TRUE)) %>% 
+   filter(month_of_year == "Sep") %>% 
+   #group_by(age_group3) %>% 
+   count()
+#summary_data
+
 ```
 
 
@@ -207,7 +215,7 @@ covid_plot <- covid_data %>%
      geom_bar(aes(fct_rev(age_group)), fill = "steelblue", width = .6) +   
      labs(title = "COVID-19 Cases in Missoula County by Age Group", 
           y = "Number of cases", x = "Age Group (years)") +
-     scale_y_continuous(breaks = c(seq(0, 200, 10)), labels = c(seq(0, 200, 10))) +
+     scale_y_continuous(breaks = c(seq(0, 400, 10)), labels = c(seq(0, 400, 10))) +
      coord_flip() +
      theme_minimal() +
      theme(plot.title = element_text(hjust = .5),
@@ -324,7 +332,7 @@ age_incidence <- county_incidence %>%
      coord_flip() +
      labs(title = "COVID-19 Incidence in Missoula County by Age Group", 
           y = "Incidence per 100,000 Population", x = "Age Group (years)") +
-     scale_y_continuous(breaks = c(seq(0, 800, 50)), labels = c(seq(0, 800, 50))) +
+     scale_y_continuous(breaks = c(seq(0, 1500, 50)), labels = c(seq(0, 1500, 50))) +
      theme_minimal() +
      theme(plot.title = element_text(hjust = .5),
            strip.text = element_text(size = 16, colour = "black"),
@@ -407,7 +415,7 @@ race_plot <- covid_data %>%
      geom_bar(aes(x = fct_rev(race)), fill = "steelblue", width = .6) +   
      labs(title = "Confirmed cases by self-reported race",
           y = "Count", x = "", fill = "") +
-     scale_y_continuous(breaks = c(seq(0, 500, 20)), labels = c(seq(0, 500, 20))) +
+     scale_y_continuous(breaks = c(seq(0, 1000, 50)), labels = c(seq(0, 1000, 50))) +
      coord_flip() +
      theme_minimal() +
      theme(strip.text = element_text(size = 16, colour = "black"),
@@ -440,7 +448,7 @@ race_incidence_plot <- race_incidence %>%
      labs(title = "COVID-19 Incidence in Missoula County", 
           subtitle = "By Self-reported Race",
           y = "Incidence per 100,000 Population", x = "") +
-     scale_y_continuous(breaks = c(seq(0, 6000, 500)), labels = c(seq(0, 6000, 500))) +
+     scale_y_continuous(breaks = c(seq(0, 7000, 500)), labels = c(seq(0, 7000, 500))) +
      theme_minimal() +
      theme(strip.text = element_text(size = 16, colour = "black"),
            title = element_text(size = 18, colour = "black"),
@@ -472,7 +480,7 @@ ethnicity_plot <- covid_data %>%
      geom_bar(aes(x = fct_rev(ethnicity)), fill = "steelblue", width = .6) +   
      labs(title = "Confirmed cases by self-reported ethnicity",
           y = "Count", x = "", fill = "") +
-     scale_y_continuous(breaks = c(seq(0, 500, 20)), labels = c(seq(0, 500, 20))) +
+     scale_y_continuous(breaks = c(seq(0, 1000, 50)), labels = c(seq(0, 1000, 50))) +
      coord_flip() +
      theme_minimal() +
      theme(strip.text = element_text(size = 16, colour = "black"),
@@ -506,7 +514,7 @@ ethnicity_incidence_plot <- ethnicity_incidence %>%
      labs(title = "COVID-19 Incidence in Missoula County by Ethnicity", 
           subtitle = "By Self-reported Ethnicity",
           y = "Incidence per 100,000 Population", x = "") +
-     scale_y_continuous(breaks = c(seq(0, 800, 50)), labels = c(seq(0, 800, 50))) +
+     scale_y_continuous(breaks = c(seq(0, 1000, 50)), labels = c(seq(0, 1000, 50))) +
      theme_minimal() +
      theme(strip.text = element_text(size = 16, colour = "black"),
            title = element_text(size = 18, colour = "black"),
@@ -560,7 +568,7 @@ covid_plot <- covid_data %>%
      labs(title = "Symptoms reported at time of testing", 
           subtitle = "By gender",
           y = "Count", x = "", fill = "") +
-     scale_y_continuous(breaks = c(seq(0, 300, 20)), labels = c(seq(0, 300, 20))) +
+     scale_y_continuous(breaks = c(seq(0, 500, 20)), labels = c(seq(0, 500, 20))) +
      coord_flip() +
      theme_minimal() +
      theme(strip.text = element_text(size = 16, colour = "black"),
@@ -614,7 +622,7 @@ covid_plot <- covid_data %>%
      labs(title = "Symptoms reported at time of testing", 
           subtitle = "By age group",
           y = "Count", x = "", fill = "") +
-     scale_y_continuous(breaks = c(seq(0, 300, 20)), labels = c(seq(0, 300, 20))) +
+     scale_y_continuous(breaks = c(seq(0, 500, 20)), labels = c(seq(0, 500, 20))) +
      coord_flip() +
      theme_minimal() +
      theme(strip.text = element_text(size = 16, colour = "black"),
@@ -903,7 +911,7 @@ date_14 <- format(Sys.Date() - 14, "%d %b %Y")
 
 covid_plot_onset <- covid_data %>% 
    filter(!is.na(symptom_onset_date_new)) %>% 
-   filter(symptom_onset_date_new > "2020-05-30") %>% 
+   filter(symptom_onset_date_new > "2020-06-30") %>% 
    group_by(symptom_onset_date_new) %>% 
    ggplot() +
      geom_rect(aes(xmin = Sys.Date() - 14, xmax = Sys.Date(), ymin=0, ymax=Inf),
@@ -921,10 +929,10 @@ covid_plot_onset <- covid_data %>%
           fill = " ") +
      ylab("Number of Cases") +
      xlab("Date") +
-     scale_x_date(breaks = seq.Date(from = as.Date("2020-06-01"), 
+     scale_x_date(breaks = seq.Date(from = as.Date("2020-07-01"), 
                                     to = as.Date(Sys.Date()), 
                                     by = "3 days"),
-                  labels = seq.Date(from = as.Date("2020-06-01"), 
+                  labels = seq.Date(from = as.Date("2020-07-01"), 
                                     to = as.Date(Sys.Date()), 
                                     by = "3 days"),
                   date_labels = "%d-%b") +
@@ -988,9 +996,9 @@ case_data_2 <- case_data %>%
    select(dates, I) 
 
 # Change latest_date depending on day of week
-# Use -15 for Thurs reports with new data
+# Use -14 for Thurs reports with new data
 # Use -18 for Mon reports with older data
-latest_date <- format(Sys.Date() - 14, "%Y-%m-%d")
+latest_date <- format(Sys.Date() - 18, "%Y-%m-%d")
 
 incidence_data <- incidence(case_data_2$dates, last_date = latest_date)
 
@@ -1122,10 +1130,10 @@ covid_plot_onset <- covid_data %>%
      xlab("Date") +
      scale_x_date(breaks = seq.Date(from = as.Date("2020-03-06"), 
                                     to = as.Date(Sys.Date()), 
-                                    by = "3 days"),
+                                    by = "5 days"),
                   labels = seq.Date(from = as.Date("2020-03-06"), 
                                     to = as.Date(Sys.Date()), 
-                                    by = "3 days"),
+                                    by = "5 days"),
                   date_labels = "%d-%b") +
      theme_minimal() +
      theme(strip.text = element_text(size = 16, colour = "black"),
@@ -1195,10 +1203,10 @@ covid_plot_test_date <- covid_data %>%
      xlab("Date") +
      scale_x_date(breaks = seq.Date(from = as.Date("2020-03-06"), 
                                     to = as.Date(Sys.Date()), 
-                                    by = "3 days"),
+                                    by = "5 days"),
                   labels = seq.Date(from = as.Date("2020-03-06"), 
                                     to = as.Date(Sys.Date()), 
-                                    by = "3 days"),
+                                    by = "5 days"),
                   date_labels = "%d-%b") +
      theme_minimal() +
      theme(strip.text = element_text(size = 16, colour = "black"),
